Finish parity with 1.12.2